--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_GA_TRACKING=UA-58087941-2
 
-GRAPHQL_HOST='http://localhost:1337/graphql'
+GRAPHQL_HOST='https://rawj-landing-page-api.herokuapp.com/graphql'
 NEXT_PUBLIC_IMAGE_HOST=''
